<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/colorBackground">

    <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="308dp"
            android:layout_height="308dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageButton
                    android:id="@+id/btnBee"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/bee_description"
                    android:onClick="btnClick"
                    app:srcCompat="@drawable/bee" />

            <ImageButton
                    android:id="@+id/btnCat"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/cat_description"
                    android:onClick="btnClick"
                    app:srcCompat="@drawable/cat" />

            <ImageButton
                    android:id="@+id/btnCow"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/cow_description"
                    android:onClick="btnClick"
                    app:srcCompat="@drawable/cow" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageButton
                    android:id="@+id/btnDog"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/dog_description"
                    android:onClick="btnClick"
                    app:srcCompat="@drawable/dog" />

            <ImageButton
                    android:id="@+id/btnDuck"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/duck_description"
                    android:onClick="btnClick"
                    app:srcCompat="@drawable/duck" />

            <ImageButton
                    android:id="@+id/btnFish"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/fish_description"
                    android:onClick="btnClick"
                    app:srcCompat="@drawable/fish" />
        </TableRow>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageButton
                    android:id="@+id/btnGorilla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/gorilla_description"
                    android:onClick="btnClick"
                    app:srcCompat="@drawable/gorilla" />

            <ImageButton
                    android:id="@+id/btnOwl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/owl_description"
                    android:onClick="btnClick"
                    app:srcCompat="@drawable/owl" />

            <ImageButton
                    android:id="@+id/btnSheep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/sheep_description"
                    android:onClick="btnClick"
                    app:srcCompat="@drawable/sheep" />
        </TableRow>
    </TableLayout>

    <TextView
            android:id="@+id/animalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="78dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            app:layout_constraintVertical_bias="0.100000024" />
</androidx.constraintlayout.widget.ConstraintLayout>